Añadiendo etiqueta HTML 5 a la tabla

--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
   <div>
 <img src="Imagenes/patata.jpg" alt="imagen HTML" width="150px" height="150px" title="HTML">
   </div>
-
+  <thead>
+    <th>País</th>
+    <th>Continente</th>
+    <th>Población</th>
+  </thead>
+  
 </body>
 </html>
