iniciar mi proyecto

--- a/index.html
+++ b/index.html
@@ -34,11 +34,50 @@
   <div>
 <img src="Imagenes/patata.jpg" alt="imagen HTML" width="150px" height="150px" title="HTML">
   </div>
-  <thead>
-    <th>País</th>
-    <th>Continente</th>
-    <th>Población</th>
-  </thead>
+  <table border="1px">
+    <tr>
+      <th>País</th>
+      <th>Continente</th>
+      <th>Población</th>
+    </tr>
   
+    <td>España</td>
+    <td>Europa</td>
+    <td>4.6 Millones</td>
+  <tr>
+    <td>Ecuador</td>
+    <td>América</td>
+    <td>2.4 millones</td>
+    </tr>
+  </table>
+  <div>
+    <h2>Lista desordenada</h2>
+    <ul> <!--li*5 hace un nuevo listado después del * con cantidad li (lista) * (por) 5(número de veces que va para abajo)-->
+      <li>Ecuador</li>
+      <li>Colombia</li>
+      <li>Perú</li>
+      <li>Venezuela</li>
+      <li>Argentina</li>
+    </ul>
+    <h2>Lista ordenada</h2>
+    <ol>
+      <li>Ecuador</li>
+      <li>Colombia</li>
+      <li>Perú</li>
+      <li>Venezuela</li>
+      <li>Argentina</li>
+    </ol>
+  </div>
+  <div>
+    <h1>Formulario</h1>
+    <!--Method: Transfiere datos Action: Acción para formulario Label: Texto que te hace la petición Input: Permite ingresar la información al usuario; 
+    placeholder: Sirve como marca de agua para el escrito; value: Sobreescribe el dato y te hace colocar el propio; required: Te obliga a llenar ese campo
+    submit: sirve para el "enviar" -->
+    <form action="" method="get">
+      <label for="">Ingrese el Nombre</label>
+      <input type="text" id="Nombre" placeholder="Ingrese el Nombre" value="Ñaña de David Ruíz" required/>
+      <input type="submit" name="Alejandro Bedoya" id="1712"   value="iniciar"/> 
+    </form>
+  </div>
 </body>
 </html>
