--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
    <h5>LA PROESA DE VALORANT</h5>
    <h6>continuara en cines</h6>
 
-   <p>lorem es para poner un texto default de un code para una prueba</p>
+   <p>lorem es para poner un texto sisi default de un code para una prueba</p>
    <p> el p sirve para separar en parrafos y que no se vea todo</p>
    <section style="border: 1px solid; border-color: crimson;">Valorant sin Estabilidad, style border sirve para poner un borde seguido de la cantidad de pixeles que ocupa, luego el border-color es para cambiar el color del borde</section>
    <section style="border: 1px solid; border-color: crimson;">
